--- a/ui/input/css/_inputMove.scss
+++ b/ui/input/css/_inputMove.scss
@@ -125,7 +125,7 @@ span#status-row {
   }
 }
 
-.voice-move {
+#voice-move {
   display: block;
   position: relative;
   background-color: $c-rounds-status-bar-bg;
@@ -187,13 +187,12 @@ div#voice-settings {
     }
   }
 
-  div.choices {
+  .choices {
     display: flex;
     justify-content: space-between;
     flex-flow: row nowrap;
     align-items: center;
 
-    // a single clickable/draggable choice button
     .choice {
       @extend %metal, %box-radius;
       cursor: pointer;
@@ -203,7 +202,6 @@ div#voice-settings {
       display: inline-block;
       text-align: center;
       border: 1px;
-      //border-color: $c-neutral;
 
       @if $theme-light {
         background: linear-gradient(hsl(0deg, 0%, 92%) 0%, hsl(0deg, 0%, 86%) 100%);
@@ -212,20 +210,16 @@ div#voice-settings {
       } @else {
         background: hsla(0deg, 0%, 50%, 0.3);
       }
-
       label {
         pointer-events: none;
       }
-
       &:not(.selected):hover {
         color: lighten($c-font, 20%);
         box-shadow: inset 0 0 1px 100px hsla(0, 0%, 100%, if($theme-light, 0.3, 0.1));
       }
     }
-
     .selected {
       cursor: default;
-
       color: white;
       background: linear-gradient(hsl(209, 79%, 58%) 0%, hsl(209, 79%, 52%) 100%);
     }
