--- a/ui/site/css/_plan.scss
+++ b/ui/site/css/_plan.scss
@@ -155,6 +155,9 @@
     .service .button:first-child {
       margin-right: 1em;
     }
+    .confirm-policy input {
+      margin-right: 1rem;
+    }
   }
 
   .small_team {
