--- a/ui/site/css/_plan.scss
+++ b/ui/site/css/_plan.scss
@@ -155,6 +155,10 @@
     .service .button:first-child {
       margin-right: 1em;
     }
+    .service .spinner {
+      width: 53px;
+      height: 53px;
+    }
     .confirm-policy input {
       margin-right: 1rem;
     }
