Add study modal to game analysis board

--- a/ui/analyse/css/_tools.scss
+++ b/ui/analyse/css/_tools.scss
@@ -50,6 +50,9 @@
       flex: 0 1 32px;
       align-items: stretch;
     }
+    div.from-game {
+      flex: 1 1 32px;
+    }
     .jumps {
       flex: 3 1 auto;
     }
