--- a/ui/round/css/_round.scss
+++ b/ui/round/css/_round.scss
@@ -18,6 +18,7 @@ $move-tag: 'm2';
 @import 'material';
 @import 'moves';
 @import 'control';
+@import 'modal-study';
 @import 'icon';
 @import 'now-playing';
 @import 'keyboard-move';
