--- a/ui/common/css/component/_tagify.scss
+++ b/ui/common/css/component/_tagify.scss
@@ -580,7 +580,7 @@
     }
 
     /*
-        in "mix mode" the tags are inside the "input" element
+        in "mix mode" the tags are inside the input element
     */
     #{$self}__tag {
       // a developer can choose to have automatic horizontal margin ("1ch" advised) between tags or use manual keyboard spaces
