--- a/ui/voice/css/_voice.scss
+++ b/ui/voice/css/_voice.scss
@@ -27,19 +27,31 @@ $c-recording-hover: hsl(6, 100%, if($theme == 'light', 40%, 60%));
 }
 
 #microphone-button {
-  font-family: 'lichess';
-  font-size: 1.6em;
-  border-width: 0 1px;
-  border-radius: 0.25em;
-  border-style: solid;
-  border-color: transparent;
-  font-weight: bold;
-  & {
+  span {
+    font-family: 'lichess';
+    font-size: 1.6em;
+    border: 1px solid transparent;
+    border-width: 0 1px;
+    border-radius: 0.25em;
+  }
+  &.enabled span {
     color: $c-recording;
     animation: pulseBorderRed 1s;
     animation-iteration-count: infinite;
+    border-color: $c-recording;
     &:hover {
       color: $c-recording-hover;
+    }
+  }
+  @keyframes pulseBorderRed {
+    0% {
+      border-color: transparent;
+    }
+    50% {
+      border-color: $c-recording;
+    }
+    100% {
+      border-color: transparent;
     }
   }
 }
@@ -130,17 +142,5 @@ $c-recording-hover: hsl(6, 100%, if($theme == 'light', 40%, 60%));
     pointer-events: none;
     color: white;
     background: linear-gradient(hsl(209, 79%, 58%) 0%, hsl(209, 79%, 52%) 100%);
-  }
-}
-
-@keyframes pulseBorderRed {
-  0% {
-    border-color: transparent;
-  }
-  50% {
-    border-color: $c-recording;
-  }
-  100% {
-    border-color: transparent;
   }
 }
