--- a/ui/voice/css/_voice.scss
+++ b/ui/voice/css/_voice.scss
@@ -6,6 +6,7 @@ $c-recording-hover: hsl(6, 100%, if($theme == 'light', 40%, 60%));
 }
 #voice-status-row {
   @extend %box-neat, %flex-center-nowrap;
+  align-items: stretch;
   background: $c-bg-box;
   padding-left: 0.2em;
   #voice-control.puz & {
@@ -23,6 +24,7 @@ $c-recording-hover: hsl(6, 100%, if($theme == 'light', 40%, 60%));
 }
 
 #voice-status {
+  @extend %flex-center-nowrap;
   flex: 1 1 auto;
 }
 
@@ -57,7 +59,6 @@ $c-recording-hover: hsl(6, 100%, if($theme == 'light', 40%, 60%));
 }
 
 #voice-settings-button {
-  font-size: 18px;
   &.active {
     color: white;
     background-color: $c-primary;
