--- a/ui/analyse/css/study/_show.scss
+++ b/ui/analyse/css/study/_show.scss
@@ -11,6 +11,7 @@
 @import 'buttons';
 @import 'invite';
 @import 'desc';
+@import 'search';
 @import 'panel/metadata';
 @import 'panel/comment';
 @import 'panel/glyph';
