tweak study search highlight padding

--- a/ui/analyse/css/study/_search.scss
+++ b/ui/analyse/css/study/_search.scss
@@ -25,7 +25,7 @@
     high {
       background-color: mix(yellow, $c-bg-box, 30%);
       color: $c-font-clearer;
-      padding: 0 0.3ch 0 0.5ch;
+      padding: 0 0.1ch;
     }
   }
 }
