--- a/ui/simul/css/_side.scss
+++ b/ui/simul/css/_side.scss
@@ -36,6 +36,50 @@ $chat-height: calc(90vh - 300px);
     }
   }
 
+  section {
+    margin-bottom: $block-gap;
+
+    &[data-icon] {
+      @extend %flex-center-nowrap;
+    }
+
+    &::before {
+      font-size: 3rem;
+      margin-#{$end-direction}: 4%;
+    }
+
+    p {
+      margin: 0;
+    }
+
+    &.conditions {
+      &::before {
+        opacity: 0.7;
+      }
+
+      &.accepted,
+      .accepted {
+        color: $c-good;
+      }
+
+      &.refused,
+      .refused {
+        color: $c-bad;
+      }
+
+      .condition:first-child,
+      .condition + .condition {
+        &.accepted::after {
+          content: '\a0\2713';
+        }
+
+        &.refused::after {
+          content: '\a0\2718';
+        }
+      }
+    }
+  }
+
   .game-infos {
     padding-bottom: 0.5em;
     border-bottom: $border;
