Add annan and kyoto shogi

--- a/ui/analyse/css/_hands.scss
+++ b/ui/analyse/css/_hands.scss
@@ -10,6 +10,8 @@
 }
 
 .analyse.variant-standard,
+.analyse.variant-annanshogi,
+.analyse.variant-kyotoshogi,
 .analyse.variant-minishogi {
   grid-template-rows: auto auto auto auto 50vh;
   grid-template-areas:
