--- a/ui/editor/css/_hands.scss
+++ b/ui/editor/css/_hands.scss
@@ -66,6 +66,9 @@
     &.r-5 {
       padding-bottom: calc(100% / 5 / 11 * 12);
     }
+    &.r-4 {
+      padding-bottom: calc(100% / 4 / 11 * 12);
+    }
     sg-hp-wrap {
       &::after {
         font-size: 1em;
